# granne

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build-macos-wheels.sh  build-wheels.sh  build.rs  build_multiplatform_linux_wheels.sh  default_settings.toml  pyproject.toml  setup.py
benches/: distance_computation.rs  index.rs  query_embeddings.rs  slice_vectors.rs
docker/manylinux/: Dockerfile  build_wheels.sh
example_data/: legacy_index.granne  test.1K.100d.txt
examples/: glove.rs
examples/py/: build_and_search.py  incremental_build.py
py/: Cargo.toml  README.md
py/src/: embeddings.rs  lib.rs  query_embeddings.rs
py/src/variants/: builder.rs  index.rs  mod.rs
slice_vector/: Cargo.toml
slice_vector/src/: lib.rs  set_vector.rs
src/: file_io.rs  granne.rs  hnsw.rs  io.rs  lib.rs  main.rs  math.rs  max_size_heap.rs  mmap.rs  odd_byte_int.rs  test_helper.rs  types.rs
src/elements/: angular.rs  angular_int.rs  angular_vector.rs  dense_vector.rs  mod.rs
src/elements/embeddings/: mod.rs  parsing.rs  reorder.rs
src/elements/sum_embeddings/: mod.rs  parsing.rs
src/hnsw/: bloomfilter.rs  generic.rs  io.rs  mod.rs  neighborid.rs  reorder.rs  sharded_hnsw.rs  tests.rs
src/hnsw/rw_builder/: mod.rs  rw_lock_slice_vector.rs  rwlock_slice_vector.rs
src/index/: io.rs  mod.rs  reorder.rs  tests.rs
src/index/rw/: mod.rs  rw_lock_slice_vector.rs
src/query_embeddings/: mod.rs  parsing.rs  reorder.rs
src/slice_vector/: mod.rs  offsets.rs  set_vector.rs
src/types/: angular_vector.rs  array.rs  float_element.rs  int8_element.rs  mmap.rs  mod.rs
