[package]
name = "granne"
version = "0.5.0"
authors = ["Erik Larsson <erik@cliqz.com>"]
license = "MIT"
edition = "2018"
links = "blas"
build = "build.rs"

[profile.release]
debug = true

[features]
default = []
singlethreaded = []
rw_granne = []

[dependencies]
byteorder = "1.3"
flate2 = "1.0"
fxhash = "0.2"
madvise = "0.1.0"
memmap = "0.7"
ordered-float = "1.0"
owning_ref = "0.4"
parking_lot = "0.10"
pbr = "1.0.0"
rayon = "1.3"
serde_json = "1.0"
stream-vbyte = "0.3.2"

rand = "0.7"

blas = {version = "0.20.0", optional = true}

[dev-dependencies]
tempfile = "3.1"
rand = "0.7"
