[package]
name = "granne"
version = "0.5.2"
edition = "2018"
authors = ["Erik Larsson <erik@cliqz.com>"]
description = "Graph-based Retrieval of Approximate Nearest Neighbors"
repository = "https://github.com/granne/granne"
documentation = "https://docs.rs/granne/"
license = "MIT"
readme = "README.md"
links = "blas"
exclude = [
    "benches/",
    "docker",
    "py/",
    "examples/",
    "setup.py",
    "pyproject.toml",
    "CHANGELOG.md",
]

[profile.release]
debug = true

[features]
default = ["singlethreaded"]
singlethreaded = []
rw_granne = []

[dependencies]
byteorder = "1.3"
flate2 = "1.0"
fxhash = "0.2"
madvise = "0.1.0"
memmap = "0.7"
ordered-float = "1.0"
owning_ref = "0.4"
parking_lot = "0.12.1"
pbr = "1.0.0"
rayon = "1.3"
serde_json = "1.0"
stream-vbyte = "0.3.2"
rand = "0.7"
blas = {version = "0.20.0", optional = true}

[dev-dependencies]
tempfile = "3.1"
rand = "0.7"

[workspace]
members = [".", "py"]
