[package]
name = "granne-py"
version = "0.3.0"
authors = ["Erik Larsson <erik.ie.larsson@gmail.com>"]

[lib]
name = "granne"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.2.0"
default-features = false
features = ["extension-module"]

[dependencies]
granne = { path = ".." }
madvise = "0.1.0"
memmap = "0.6.2"
rayon = "1.0"
serde_json = "1.0.2"
