[package]
name = "granne-py"
version = "0.5.0"
authors = ["Erik Larsson <erik.ie.larsson@gmail.com>"]
edition = "2018"

[lib]
name = "granne"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.3"
features = ["extension-module"]

[dependencies]
granne = { path = ".." }
madvise = "0.1.0"
memmap = "0.6.2"
rayon = "1.0"
serde_json = "1.0.2"
