[package]
name = "granne-py"
version = "0.5.0"
authors = ["Erik Larsson <erik@cliqz.com>"]
edition = "2018"

[lib]
name = "granne"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.3"
features = ["extension-module"]

[dependencies]
granne = { path = ".." }
rayon = "1.3"
serde_json = "1.0"

